--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
 </head>
 
 <body>
-
-
-
     <br>
     <div class="cadastro">
         <h1 id="titulo">Criar uma nova conta</h2>
-            <label for="email1">Email</label>
-            <input type="text" id="login-cad" name="email1" placeholder="joaozinho123@gmail.com" autocomplete="off">
+            <label for="email1">Usuario</label>
+            <input type="text" id="login-cad" name="email1" placeholder="Osvaldo" autocomplete="off">
             <br>
             <label for="senha">Senha</label>
             <input type="password" id="senha-cad" placeholder="******" autocomplete="off"> <br>
