--- a/home/home.html
+++ b/home/home.html
@@ -9,6 +9,42 @@
 </head>
 <body>
     <h1 id="titulo"></h1>
-    <script src="script_home.js"></script>
+    <button id="deslogar" onclick="deslogar()">Desolgar</button>
+    <div class="calculadora">
+        <div id="screenContainer">
+            <input type="text" id='screen' disabled= 'true'>
+        </div>
+        <div class="row5" >
+            <button id='delete'>⌫</button>
+
+        </div>
+        <div class="row1">
+        <button onclick="addToScreen('7')">7</button>
+        <button onclick="addToScreen('8')">8</button>
+        <button onclick="addToScreen('9')">9</button>
+        <button onclick="addToScreen('*')">X</button>
+    </div>
+    <div class="row2">
+        <button onclick="addToScreen('4')">4</button>
+        <button onclick="addToScreen('5')">5</button>
+        <button onclick="addToScreen('6')">6</button>
+        <button onclick="addToScreen('-')">-</button>
+    </div>
+    <div class="row3">
+
+        <button onclick="addToScreen('1')">1</button>
+        <button onclick="addToScreen('2')">2</button>
+        <button onclick="addToScreen('3')">3</button>
+        <button onclick="addToScreen('+')">+</button>
+    </div>
+    <div class="row4">
+        <button onclick="addToScreen('/')">/</button>
+        <button onclick="addToScreen('0')">0</button>
+        <button id="cleaner">C</button>
+        <button onclick="result()">=</button>
+    </div>
+    </div>
+    <script src="script_home.js"></script>  
+    <script src="calculadora.js"></script>
 </body>
 </html>
