--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&family=Poppins:wght@500&display=swap"
         rel="stylesheet">
     <title>Login</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/310/310818.png" type="image/x-icon">
     
 </head>
 
