--- a/home/home.html
+++ b/home/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 id="titulo"></h1>
-    <button id="deslogar" onclick="deslogar()">Desolgar</button>
+    <button id="deslogar" onclick="deslogar()">Sair</button>
     <div class="calculadora">
         <div id="screenContainer">
             <input type="text" id='screen' disabled= 'true'>
